# Arcade

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: action.yml
docs/: Doxyfile.in
games/pacman/: Pacman.cpp
games/snake/: Snake.cpp
graphics/: DisplayModuleImpl.cpp  IDisplayModule.cpp
graphics/sdl2/: SDL2.cpp
include/: Arcade.hpp  CoreModule.hpp  DLLoader.hpp  ICoreModule.hpp  IDisplayModule.hpp  IModule.hpp  NCurses.hpp  Pacman.hpp  SDL2.hpp  Snake.hpp
include/game/: AGameModule.hpp  IGameModule.hpp  Pacman.hpp  Snake.hpp
include/graphic/: ADisplayModule.hpp  IDisplayModule.hpp  NCurses.hpp  SDL2.hpp  Sdl2.hpp  Sfml.hpp
interface/: CMakeLists.txt
interface/include/: Arcade.hpp  CoreModule.hpp  DLLoader.hpp  Error.hpp  Shell.hpp
interface/include/arcade/: ICoreModule.hpp  IDisplayModule.hpp  IGameModule.hpp  IModule.hpp
lib/: CoreModule.cpp
lib/games/: AGameModule.cpp  AGameModule.hpp  CMakeLists.txt  IGameModule.cpp
lib/games/nibbler/: CMakeLists.txt  Nibbler.cpp  Nibbler.hpp
lib/games/pacman/: Pacman.cpp  Pacman.hpp
lib/games/snake/: Snake.cpp  Snake.hpp
lib/graphics/: ADisplayModule.cpp  ADisplayModule.hpp  CMakeLists.txt  DisplayModuleImpl.cpp  IDisplayModule.cpp
lib/graphics/ncurses/: NCurses.cpp  NCurses.hpp
lib/graphics/sdl2/: CMakeLists.txt  SDL2.cpp  Sdl2.cpp  Sdl2.hpp
lib/graphics/sfml/: CMakeLists.txt  Sfml.cpp  Sfml.hpp
src/: CoreModule.cpp  Main.cpp  Shell.cpp  main.cpp
